--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -8,7 +8,11 @@
     }
 
     .card-container {
-        top: -13.5vh;
+        top: -12.5vh;
+    }
+
+    .rotate {
+        margin-top: 2vh;
     }
 
     .apps-details {
