--- a/style.css
+++ b/style.css
@@ -497,6 +497,8 @@ small {
 
 .client-feedback-card {
     display: flex;
+    justify-content: center;
+    align-items: center;
     max-width: 30%;
 }
 
