--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
     flex-direction: column;
     border-top: 6px solid lightblue;
     text-align: center;
-    padding-top: 3vh;
+    padding-top: 1%;
 }
 
 .rotate {
@@ -68,7 +68,7 @@ body {
     margin: -5px;
     width: 99vw;
     text-align: center;
-    font-size: 340%;
+    font-size: 400%;
     font-weight: 500;
     text-shadow: -5px 1px 5px rgba(32, 27, 27, 0.6);
     font-family: "Rubik";
@@ -118,7 +118,12 @@ body {
         -54px 0px 2px rgba(220, 220, 220, 0.013),
         -56px 0px 2px rgba(220, 220, 220, 0.012),
         -58px 0px 2px rgba(220, 220, 220, 0.011),
-        -60px 0px 2px rgba(220, 220, 220, 0.01);
+        -60px 0px 2px rgba(220, 220, 220, 0.01),
+        -62px 0px 2px rgba(220, 220, 220, 0.01),
+        -64px 0px 2px rgba(220, 220, 220, 0.01),
+        -66px 0px 2px rgba(220, 220, 220, 0.01),
+        -68px 0px 2px rgba(220, 220, 220, 0.01),
+        -70px 0px 2px rgba(220, 220, 220, 0.01);
 }
 
 .card-container {
@@ -426,7 +431,8 @@ small {
 
 .benefits-header h1 {
     font-weight: 900;
-    margin-bottom: 1vh;
+    font-size: 2.5rem;
+    margin-bottom: 1.5vh;
 }
 
 .benefits-header h3 {
@@ -472,10 +478,10 @@ small {
 }
 
 .client-feedback {
-    min-height: 250px;
+    min-height: 300px;
     display: flex;
     color: #706969;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
 }
@@ -490,7 +496,7 @@ small {
     display: flex;
     margin: 2vh;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     gap: 4vh;
     margin-top: 2%;
 }
@@ -519,6 +525,8 @@ small {
 
 .client-feedback-message p {
     font-weight: 300;
+    font-size: 1.5rem;
+    margin-bottom: 1vh;
 }
 
 .yellow {
