--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ body {
 
 .card-speed {
     font-weight: 900;
-    font-size: 2.75rem;
+    font-size: 3.2rem;
     text-align: center;
     margin-top: 10%;
 }
@@ -321,8 +321,7 @@ body {
 
 .apps-details {
     display: flex;
-    justify-content: start;
-    margin-left: 20%;
+    justify-content: center;
     align-items: center;
     margin-bottom: 1vh;
     color: #706969;
