--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 .city {
-    font-size: 1.5rem;
+    font-size: 24px;
     font-weight: bold;
     color: white;
     margin-bottom: 2vh;
@@ -56,7 +56,7 @@ body {
 }
 
 .rotate {
-    rotate: -1deg;
+    rotate: -1.5deg;
 }
 
 .main {
