--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -29,7 +29,7 @@
         font-size: 80%;
     }
 
-    .teste {
+    .appLogoContainer {
         width: 50px;
         height: 50px;
     }
@@ -132,7 +132,7 @@
         margin-top: 4vh;
     }
 
-    .teste {
+    .appLogoContainer {
         width: 55px;
         height: 55px;
     }
@@ -143,6 +143,8 @@
     }
     .client-feedback-container {
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 
     .client-feedback-card {
@@ -168,7 +170,7 @@
         font-size: 100%;
     }
 
-    .teste {
+    .appLogoContainer {
         width: 40px;
         height: 40px;
     }
