--- a/style.css
+++ b/style.css
@@ -17,9 +17,12 @@ body {
     font-family: "League Spartan";
 }
 
+/* HEADER (LOGO, TITLE, TITLE 2) */
+
 .header-1 img {
     height: 50px;
     width: auto;
+    margin-top: 2.5vh;
 }
 
 .header-1 {
@@ -29,10 +32,6 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-}
-
-.logo {
-    margin-top: 2.5vh;
 }
 
 .city {
@@ -59,10 +58,6 @@ body {
     rotate: -1.5deg;
 }
 
-.main {
-    position: relative;
-}
-
 .title {
     color: white;
     margin: -5px;
@@ -79,13 +74,6 @@ body {
     font-size: 35px;
     font-weight: 600;
     text-shadow: -5px 1px 5px rgba(32, 27, 27, 0.6);
-}
-
-.line {
-    width: 70%;
-    height: 2px;
-    margin-bottom: 2vh;
-    background-color: #dfd7d7;
 }
 
 .speed-effect {
@@ -126,6 +114,12 @@ body {
         -70px 0px 2px rgba(220, 220, 220, 0.01);
 }
 
+/* MAIN BODY */
+.main {
+    position: relative;
+}
+
+/* CARD RELATIVES */
 .card-container {
     position: relative;
     top: -12.5vh;
@@ -141,6 +135,13 @@ body {
     justify-content: center;
     align-items: center;
     margin-top: 3vh;
+}
+
+.line {
+    width: 70%;
+    height: 2px;
+    margin-bottom: 2vh;
+    background-color: #dfd7d7;
 }
 
 .lines {
@@ -224,7 +225,7 @@ body {
     justify-content: space-evenly;
 }
 
-.teste {
+.appLogoContainer {
     width: 70px;
     height: 70px;
     background: radial-gradient(circle, #4169e1, #3d3c3a);
@@ -243,6 +244,28 @@ body {
 .card-benefits {
     text-align: center;
     margin-top: 1vh;
+}
+
+.card-advantages {
+    color: white;
+    width: 275px;
+    min-height: 150px;
+    padding: 1.5vh;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.card-advantages h4 {
+    font-size: 1.3rem;
+    margin-bottom: 1vh;
+    font-weight: bold;
+}
+
+.card-advantages p {
+    font-size: 1.2rem;
 }
 
 .card-price {
@@ -340,6 +363,7 @@ small {
     margin-top: 0.5vh;
 }
 
+/* Benefits Section */
 .benefits {
     min-height: 30vh;
     background: linear-gradient(to bottom, #2a53e5, #021044);
@@ -384,15 +408,11 @@ small {
 .switch > .slider:after {
     position: absolute;
     top: 50%;
-    right: 1rem;
     transform: translate(0, -50%);
     font-size: 1.5rem;
-    line-height: 1.4rem;
     color: #444;
     font-weight: bold;
     z-index: 1;
-    transition: all 300ms ease-in-out;
-    content: "OFF";
     font-weight: 900;
 }
 
@@ -447,33 +467,11 @@ small {
     margin: 5vh;
 }
 
-.card-advantages {
-    color: white;
-    width: 275px;
-    min-height: 150px;
-    padding: 1.5vh;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
 .img-benefits {
-    width: 90px;
-    height: 90px;
+    width: 85px;
+    height: 85px;
     margin-bottom: 2vh;
     color: white;
-}
-
-.card-advantages h4 {
-    font-size: 1.5rem;
-    margin-bottom: 1vh;
-    font-weight: bold;
-}
-
-.card-advantages p {
-    font-size: 1.2rem;
 }
 
 .client-feedback {
@@ -493,7 +491,7 @@ small {
 
 .client-feedback-container {
     display: flex;
-    margin: 2vh;
+    margin: 3vh 2vh;
     justify-content: center;
     align-items: flex-start;
     gap: 4vh;
