--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -54,6 +54,7 @@
     .client-feedback-container {
         flex-direction: column;
         padding: 2vh;
+        gap: 5vh;
     }
 
     .client-feedback-card {
@@ -108,6 +109,7 @@
     .client-feedback-container {
         flex-direction: column;
         padding: 2vh;
+        gap: 5vh;
     }
 
     .client-feedback-card {
@@ -145,6 +147,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        gap: 5vh;
     }
 
     .client-feedback-card {
